Tue Jun  8 14:25:56 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * protocols/ace/INet/inet.mpc:

          Install the export header.

Tue Jun 08 08:50:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.cpp:
        * protocols/ace/INet/String_IOStream.cpp:
        * protocols/ace/INet/HTTP_IOStream.cpp:
          Changed static_cast to ACE truncate_cast.

Tue Jun 08 07:32:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.cpp:
        * protocols/ace/INet/String_IOStream.cpp:
        * protocols/ace/INet/HTTP_IOStream.cpp:
          Changes to silence conversion warnings.

Tue Jun 08 07:16:30 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * protocols/ace/INet/StreamHandler.h:
        * protocols/ace/INet/BidirStreamBuffer.cpp:
        * protocols/ace/INet/Sock_IOStream.cpp:
        * protocols/ace/INet/Response.h:
        * protocols/ace/INet/HTTP_URL.h:
        * protocols/ace/INet/HTTP_StreamPolicyBase.h:
        * protocols/ace/INet/HTTP_StreamPolicy.cpp:
        * protocols/ace/INet/StreamInterceptor.cpp:
        * protocols/ace/INet/String_IOStream.h:
        * protocols/ace/INet/ConnectionCache.inl:
        * protocols/ace/INet/HeaderBase.inl:
        * protocols/ace/INet/ConnectionCache.cpp:
        * protocols/ace/INet/HeaderBase.cpp:
        * protocols/ace/INet/HTTP_ClientRequestHandler.inl:
        * protocols/ace/INet/HTTP_ClientRequestHandler.cpp:
        * protocols/ace/INet/RequestHandler.cpp:
        * protocols/ace/INet/HTTP_IOStream.h:
        * protocols/ace/INet/HTTP_Status.h:
        * protocols/ace/INet/HTTP_Session.h:
        * protocols/ace/INet/HTTP_Header.inl:
        * protocols/ace/INet/HTTP_Header.cpp:
        * protocols/ace/INet/StreamHandler.cpp:
        * protocols/ace/INet/ClientRequestHandler.h:
        * protocols/ace/INet/IOS_util.h:
        * protocols/ace/INet/HTTP_Request.h:
        * protocols/ace/INet/Request.h: